# corundum

./: .gitignore  Cargo.toml  Gemfile  README.md  Rakefile  corundum.gemspec
benchmark/: array.rb  factorial.rb  while.rb
corundum_jit/: Cargo.toml
corundum_jit/src/: jit.rs  lib.rs  method_translator.rs  opcode.rs  opcode_translator.rs  tracelet_translator.rs  translation_state.rs
corundum_ruby/: Cargo.toml  build.rs
corundum_ruby/src/: fixnum.rs  lib.rs  value.rs  vm.rs
lib/: corundum.rb
lib/corundum/: native.bundle
src/: lib.rs  ruby.rs
test/: benchmarks_test.rb  call_test.rb  corundum_test.rb
