[package]
name = "corundum_jit"
version = "0.0.0"

[dependencies]
cranelift = "0.29.0"
cranelift-codegen = "0.29.0"
cranelift-entity = "0.29.0"
cranelift-frontend = "0.29.0"
cranelift-module = "0.29.0"
cranelift-simplejit = "0.29.0"

helix = "0.7.5"
corundum_ruby = { path = "../corundum_ruby", features = ["test"] } 
